--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
-          ssh-key: ${{ secrets.PUSH_GITHUB }}
+          token: ${{ secrets.PUSH_GITHUB }}
           branch: gh-pages
           folder: build
